--- a/hwcss.html
+++ b/hwcss.html
@@ -56,8 +56,8 @@
 			<li>
 				Settings
 				<ul>
-					<li><a href="#"> Network</a></li>
-					<li><a href="#"> Social</a></li>
+					<li><a href="#"> Edit </a></li>
+					<li><a href="#"> Notifications</a></li>
 				</ul>
 			</li>
 		</ul>
