--- a/Homework1_css.html
+++ b/Homework1_css.html
@@ -9,7 +9,7 @@
             body { margin: 0; }
             a { text-decoration: none; }
 			.menu {
-				width: 20%;
+				width: 18%;
 				list-style-type: none;
                 color: #651FFF;
                 background-color: #CCFF90;
@@ -45,7 +45,7 @@
 	<body>
 		<ul class="menu">
 			<li>
-				Menu
+                <font size="5">Menu </font>
 				<ul>
 					<li>
 						<a href="#"> Open</a>
@@ -54,7 +54,7 @@
 				</ul>
 			</li>
 			<li>
-				Settings
+                <font size="5">Settings</font>
 				<ul>
 					<li><a href="#"> Edit </a></li>
 					<li><a href="#"> Notifications</a></li>
